infra/k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-space-gcal-event-deployment # name of the deployment
spec:
  replicas: 1 # no of pods we want to run
  selector:
    matchLabels:
      app: twitter-space-gcal-event
  template:
    metadata:
      labels:
        app: twitter-space-gcal-event
    spec:
      containers:
        - name: twitter-space-gcal-event # name of the container
          image: 796007131872.dkr.ecr.ap-south-1.amazonaws.com/twitter-space-gcal-event:latest # use the latest tag here, so that we don't have to manually change the tag for each deployment
          imagePullPolicy: Always
