infra/k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter-space-gcal-event-service
spec:
  # type: LoadBalancer # this will provison a LB from the cloud provider and expose it to the public to start accepting incoming requests
  type: ClusterIP # don't expose this service to the outside world
  selector:
    app: twitter-space-gcal-event
  ports:
    - name: twitter-space-gcal-event
      protocol: TCP
      port: 80 # port on which the LB service is running
      targetPort: 7000 # port of the container that is running inside the pod
