infra/k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitter-space-gcal-event-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: api.markevent.link
    http:
      paths:
      - pathType: Prefix
        path: /(|$)(.*)
        backend:
          service:
            name: twitter-space-gcal-event-service
            port:
              number: 80
  tls:
  - hosts:
    - api.markevent.link
    secretName: twitter-space-gcal-event-api-cert
